log
Fri 19 Aug 2022 04:34:58 PM UTC: 
 tests:  0|6
total_score: 0/70
24d1ed4
Fri 19 Aug 2022 04:40:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list * lista = (list *)malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:32:19: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   32 |   list * lista = (list *)malloc(sizeof(list));
      |                   ^~~~
      |                   List
list.c:32:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ‘)’ token
   32 |   list * lista = (list *)malloc(sizeof(list));
      |                         ^
list.c:32:10: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   list * lista = (list *)malloc(sizeof(list));
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a74e29f
Fri 19 Aug 2022 04:41:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:10: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List * lista = (List *)malloc(sizeof(List));
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a29d0f4
Fri 19 Aug 2022 04:41:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2bb662d
Fri 19 Aug 2022 04:49:05 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if(!lista->first) return NULL;
      |       ^~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5558d4d
Fri 19 Aug 2022 04:49:27 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   if(!list->first) return NULL;
      |           ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
140da2c
Fri 19 Aug 2022 04:51:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if(!lista->first) return NULL;
      |       ^~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ddeee6e
Fri 19 Aug 2022 04:51:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:12: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   if(!*list->first) return NULL;
      |            ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
62b0c0b
Fri 19 Aug 2022 04:51:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:10: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   if(list->first) return NULL;
      |          ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
586e9ef
Fri 19 Aug 2022 04:54:58 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   list->current=list->first;
      |                     ^~
list.c:38:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   return list->first->data;
      |              ^~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
03face2
Fri 19 Aug 2022 04:55:26 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ded928b
Fri 19 Aug 2022 04:55:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a20d31
Fri 19 Aug 2022 05:01:51 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:6: error: expected expression before ‘)’ token
   39 |   if()
      |      ^
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3860257
Fri 19 Aug 2022 05:02:24 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
fa60bc4
Fri 19 Aug 2022 05:03:40 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
55b3eaa
Fri 19 Aug 2022 05:07:39 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:36: error: expected ‘;’ before ‘return’
   45 |   list->current=list->current->next
      |                                    ^
      |                                    ;
   46 |     return list->current->data;
      |     ~~~~~~                          
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2daddab
Fri 19 Aug 2022 05:07:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
74587d7
Fri 19 Aug 2022 05:08:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9b9c959
Fri 19 Aug 2022 05:10:01 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:17: error: ‘next’ undeclared (first use in this function)
   45 |   list->current=next;
      |                 ^~~~
list.c:45:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3f862e6
Fri 19 Aug 2022 05:10:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |   list->current=list->next;
      |                     ^~
Compilation failed
a2d873f
Fri 19 Aug 2022 05:10:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3ddb07e
Fri 19 Aug 2022 05:13:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
62ef5bf
Fri 19 Aug 2022 05:17:51 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
211a195
